--- a/src/posts/starting-a-blog.mdx
+++ b/src/posts/starting-a-blog.mdx
@@ -4,7 +4,7 @@ tags:
   - opening post
   - front-end
 date: 2022-6-2
-excerpt: I have decided to create a blog to document my journey as a front-end developer and share tips and tricks. Read this first article to learn what I'll be writing about.
+excerpt: I have decided to create a blog to document my journey as a front-end developer and to share tips and tricks. Read this first article to learn what I'll be writing about.
 image: '/static/images/starting-a-blog.jpg'
 ---
 
