--- a/src/posts/starting-a-blog.mdx
+++ b/src/posts/starting-a-blog.mdx
@@ -25,11 +25,12 @@ I'm currently working as a front-end developer at [Trifork](https://trifork.com)
 Most blog posts will be focused on front-end development and will feature technologies I'm currently working with. But I'll also make sure to write a new blog post whenever I'm experimenting with some new tool or technology. Below is a list of topics that I'll write about first:
 
 - Next.js - API routes
-- React - (Custom) hooks, Context)
+- React - (Custom) hooks, Context
 - JavaScript - 'this' keyword, destructuring
 - Styling - SCSS, styled-components, dark mode
 - SSR vs SSG vs CSR vs ISR
 - (Back-end) validation with yup
+- Testing - react-testing-library
 
 ## Wrapping up
 
